runfix: prevent av select overflow in between breakpoints (#14039)

--- a/src/style/common/variables.less
+++ b/src/style/common/variables.less
@@ -291,7 +291,7 @@ body {
 @screen-sm-min: 320px;
 @screen-sm: 480px;
 @screen-md-min: 768px;
-@screen-lg-min: 920px;
+@screen-lg-min: 960px;
 
 @screen-height-sm: 420px;
 
